--allow-net added

--- a/.runme/Dockerfile
+++ b/.runme/Dockerfile
@@ -1,4 +1,4 @@
 FROM hayd/deno:1.0.5
 WORKDIR /app
 COPY . .
-ENTRYPOINT deno run --allow-env app.ts 
+ENTRYPOINT deno run --allow-env --allow-net app.ts 
